# warehouse

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  build.sh
src/: main.cpp
src/backend/: StockManager.cpp  StockManager.hpp  data.cpp  data.hpp
src/frontend/: frontend.cpp  frontend.hpp
